--- a/notebooks/01-fix_grammar.ipynb
+++ b/notebooks/01-fix_grammar.ipynb
@@ -431,13 +431,13 @@
     "this looks really promising, can we add a field `type` to parseResults? Or just use \n",
     "\n",
     "```\n",
-    "if 'shape' in rules:  \n",
+    "if 'shape_name' in rules:  \n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -447,23 +447,24 @@
        "  {'tid': 'y', 'tvalues': ['30']},\n",
        "  {'tid': 'z', 'tvalues': ['-3']},\n",
        "  {'tid': 's', 'tvalues': ['900', '900', '1']}],\n",
-       " 'shape': 'box'}"
+       " 'shape_name': 'box'}"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# added to module\n",
-    "t = ex.rule_shape_grammar().parse_string(tstr)\n",
+    "tstr = '{  x 30 y 30 z -3 s 900 900 1 color white } box'\n",
+    "t = ex.call_grammar().parse_string(tstr)\n",
     "t.as_dict()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -471,27 +472,57 @@
       "text/plain": [
        "{'trans': [{'tid': 'rx', 'tvalues': ['180']},\n",
        "  {'tid': 'x', 'tvalues': ['20']},\n",
-       "  {'tid': 'rz', 'tvalues': ['2']}],\n",
+       "  {'tid': 'rz', 'tvalues': ['2']},\n",
+       "  {'tid': 's', 'tvalues': ['1']}],\n",
        " 'rule_name': 'br'}"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tstr = '{ rx 180 x 20  rz 2 } br'\n",
-    "t = ex.rule_shape_grammar().parse_string(tstr)\n",
+    "tstr = '{ rx 180 x 20  rz 2 s 1 } br'\n",
+    "t = ex.call_grammar().parse_string(tstr)\n",
     "t.as_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'rx 180 tx 20 rz 2 sa 1'"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ex.trans_str(t['trans'])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The rests of `eisen_grammar` will need a similar treatment."
+    "The rest of `eisen_grammar` will need a similar treatment ,but this is good progress on simplifying the output.\n",
+    "\n",
+    "Get rid of camelCase at some stage."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
