about to drop  pyparsing

--- a/notebooks/00-does-it-work.ipynb
+++ b/notebooks/00-does-it-work.ipynb
@@ -2267,6 +2267,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Too many brackets used to produce from original on git hub\n",
+    "```\n",
+    "<rules max_depth=\"2000\">\n",
+    "    <rule name=\"entry\">\n",
+    "        <call rule=\"R1\"/>\n",
+    "    </rule>\n",
+    "    <rule name=\"R1\" weight = \"10\">\n",
+    "        <call transforms=\"tx 1 rz 5 ry 2\" rule=\"R1\"/>\n",
+    "        <instance transforms=\"sa 3 ry 90\" shape=\"box\"/>\n",
+    "    </rule>\n",
+    "    <rule name=\"R1\" weight = \"10\">\n",
+    "        <call transforms=\"tx 1 rz -5 ry 2\" rule=\"R1\"/>\n",
+    "        <instance transforms=\"sa 3 ry 90\" shape=\"box\"/>\n",
+    "    </rule>\n",
+    "        \n",
+    "</rules>\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "set maxdepth 2000\n",
+    "{ a 0.9 hue 30 } R1 \n",
+    "\n",
+    "rule R1 w 10 { \n",
+    "{ x 1  rz 5 ry 2  } R1\n",
+    "\n",
+    "} \n",
+    "\n",
+    "rule R1 w 10 { \n",
+    "{ x 1  rz -5 ry 2  } R1\n",
+    "{ s 3 ry 90 } box\n",
+    "} "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
