--- a/notebooks/scraps.ipynb
+++ b/notebooks/scraps.ipynb
@@ -222,10 +222,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "call 10 tx 1 r1_00\n",
+      "rule r1_00\n",
+      "   call 20 ty 2 r1_01\n",
+      "rule r1_01\n",
+      "   call 5 tz 3 r1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test logic of nested loops\n",
+    "data = [[10, 'tx 1'], [20, 'ty 2'], 'r1']\n",
+    "\n",
+    "# want something like (this is without the xml)\n",
+    "s = \"\"\"call 10 tx 1 r1_00\n",
+    "       rule r1_00\n",
+    "          call 20 ty 2 r1_01\n",
+    "       rule r1_01\n",
+    "        call 5  ty z r1\"\"\"\n",
+    "\n",
+    "# write it long winded then refine\n",
+    "\n",
+    "\n",
+    "\n",
+    "# is it easier to turn data into a dict? or get it backa as dict\n",
+    "# what would this look like\n",
+    "\n",
+    "data = [{'count': '10', 'tgroup': 'tx 1', 'rname': 'r1'}, \n",
+    "        {'count': '20', 'tgroup': 'ty 2', 'rname': 'r1'},\n",
+    "        {'count': '5', 'tgroup': 'tz 3', 'rname': 'r1'}]\n",
+    "\n",
+    "\n",
+    "base_rname = data[-1]['rname']\n",
+    "if len(data) > 1:\n",
+    "    # replace all but last rule name with new one in chain\n",
+    "    for i, loop in enumerate(data[:-1]):\n",
+    "        loop['rname'] = f'{base_rname}_{i:02}'\n",
+    "\n",
+    "    # write data[0] as call rest as calls within new rules\n",
+    "    print('call ' + data[0]['count'] + ' ' + data[0]['tgroup'] + ' ' + data[0]['rname'])\n",
+    "    for i, loop in enumerate(data[1:]):\n",
+    "        print('rule ' + data[i]['rname'])\n",
+    "        print('   call ' + loop['count'] + ' ' + loop['tgroup'] + ' ' + loop['rname'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'count': '10', 'tgroup': 'tx 1', 'rname': 'r1_00'},\n",
+       " {'count': '20', 'tgroup': 'ty 2', 'rname': 'r1_01'},\n",
+       " {'count': '5', 'tgroup': 'tz 3', 'rname': 'r1'}]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# what if count is missing? can force it to be 1 somewhere - wouldn't matter\n",
+    "data"
+   ]
   }
  ],
  "metadata": {
