--- a/notebooks/05a-lark-eisen.ipynb
+++ b/notebooks/05a-lark-eisen.ipynb
@@ -16,7 +16,7 @@
     "from pathlib import Path\n",
     "from lark import Lark\n",
     "from lark.visitors import Interpreter, Transformer, v_args\n",
-    "parser = Lark.open('eisenscript.lark')"
+    "parser = Lark.open('eisenscript_02.lark')"
    ]
   },
   {
@@ -77,7 +77,7 @@
     {
      "data": {
       "text/plain": [
-       "Tree(Token('RULE', 'main'), [Tree(Token('RULE', 'entry'), [Tree(Token('RULE', 'call'), [Tree('repeat', [Token('NUMBER', '2')]), Tree(Token('RULE', 'loop'), [Tree(Token('RULE', 'trans'), [Token('TID', 'x'), Token('VALUE', '1')]), Tree(Token('RULE', 'trans'), [Token('TID', 'y'), Token('VALUE', '2')])]), Tree('rulename', [Token('RULENAME', 'seed')])]), Tree(Token('RULE', 'call'), [Tree(Token('RULE', 'loop'), [Tree(Token('RULE', 'trans'), [Token('TID', 'rx'), Token('VALUE', '1')]), Tree(Token('RULE', 'trans'), [Token('TID', 'ry'), Token('VALUE', '2')])]), Tree('rulename', [Token('RULENAME', 'seed')])])]), Tree(Token('RULE', 'ruledef'), [Tree('rulename', [Token('RULENAME', 'seed')]), Tree(Token('RULE', 'call'), [Tree('rulename', [Token('RULENAME', 'box')])])])])"
+       "Tree(Token('RULE', 'main'), [Tree(Token('RULE', 'entry'), [Tree(Token('RULE', 'call'), [Tree(Token('RULE', 'loop'), [Tree('repeat', [Token('NUMBER', '2')]), Tree(Token('RULE', 'transgroup'), [Tree(Token('RULE', 'trans'), [Token('TID', 'x'), Token('VALUE', '1')]), Tree(Token('RULE', 'trans'), [Token('TID', 'y'), Token('VALUE', '2')])])]), Tree('rulename', [Token('RULENAME', 'seed')])]), Tree(Token('RULE', 'call'), [Tree(Token('RULE', 'loop'), [Tree(Token('RULE', 'transgroup'), [Tree(Token('RULE', 'trans'), [Token('TID', 'rx'), Token('VALUE', '1')]), Tree(Token('RULE', 'trans'), [Token('TID', 'ry'), Token('VALUE', '2')])])]), Tree('rulename', [Token('RULENAME', 'seed')])])]), Tree(Token('RULE', 'ruledef'), [Tree('rulename', [Token('RULENAME', 'seed')]), Tree(Token('RULE', 'call'), [Tree(Token('RULE', 'loop'), []), Tree('rulename', [Token('RULENAME', 'box')])])])])"
       ]
      },
      "execution_count": 4,
@@ -102,27 +102,30 @@
       "main\n",
       "  entry\n",
       "    call\n",
-      "      repeat\t2\n",
       "      loop\n",
-      "        trans\n",
-      "          x\n",
-      "          1\n",
-      "        trans\n",
-      "          y\n",
-      "          2\n",
+      "        repeat\t2\n",
+      "        transgroup\n",
+      "          trans\n",
+      "            x\n",
+      "            1\n",
+      "          trans\n",
+      "            y\n",
+      "            2\n",
       "      rulename\tseed\n",
       "    call\n",
       "      loop\n",
-      "        trans\n",
-      "          rx\n",
-      "          1\n",
-      "        trans\n",
-      "          ry\n",
-      "          2\n",
+      "        transgroup\n",
+      "          trans\n",
+      "            rx\n",
+      "            1\n",
+      "          trans\n",
+      "            ry\n",
+      "            2\n",
       "      rulename\tseed\n",
       "  ruledef\n",
       "    rulename\tseed\n",
       "    call\n",
+      "      loop\n",
       "      rulename\tbox\n",
       "\n"
      ]
@@ -172,16 +175,82 @@
     "        self.active = self.xmltree\n",
     "        \n",
     "    def call(self, tree):   \n",
-    "        # the tag is set in rulename method depending if call to rule or instance of shape\n",
-    "        call = et.SubElement(self.active, \"dummy tag\")\n",
-    "        current = self.active\n",
-    "        self.active = call\n",
-    "        print('len(call kids)', len(tree.children))\n",
-    "        self.visit_children(tree)\n",
-    "        self.active = current\n",
+    "        # do all the xml for the call kids here\n",
+    "        # the call will consist of zero or more loops plus a rule name\n",
+    "        # extra nested loops will be converted to new rules and called in a chain\n",
+    "        \n",
+    "\n",
+    "        # call = et.SubElement(self.active, \"dummy tag\")\n",
+    "        # current = self.active\n",
+    "        # self.loop_count = 0\n",
+    "        # self.active = call\n",
+    "        # print('len(call kids)', len(tree.children))\n",
+    "        data = self.visit_children(tree)\n",
+    "        rname = data[1]\n",
+    "        print(data)\n",
+    "        # if rname in [\"box\", \"grid\", \"sphere\", \"line\"]:\n",
+    "        #     call = et.SubElement(self.active, \"instance\")\n",
+    "        #     call.set(\"shape\", rname)\n",
+    "        # else:\n",
+    "        #     call = et.SubElement(self.active, \"call\")\n",
+    "        #     call.set(\"rule\", rname)\n",
+    "               \n",
+    "\n",
+    "        # for loop in data[:-1]:\n",
+    "        #     if len(loop) == 2:\n",
+    "        #         count, tstr = loop\n",
+    "        #         print(count, tstr)\n",
+    "        #     elif len(loop) == 1:\n",
+    "        #         tstr = loop[-1]\n",
+    "        #         print(tstr)\n",
+    "\n",
+    "        # can we make count = 1 rather than missing \n",
+    "        # for loop in data[:-1]:\n",
+    "            \n",
+    "\n",
+    "\n",
+    "\n",
+    "        # loop = data[0]\n",
+    "        # if len(loop) == 2:\n",
+    "        #     count, tstr = loop\n",
+    "        #     call.set(\"count\", count)\n",
+    "        #     call.set(\"transforms\", tstr)\n",
+    "        # elif len(loop) == 1:\n",
+    "        #     tstr = loop[-1]\n",
+    "        #     call.set(\"transforms\", tstr)   \n",
+    "   \n",
+    "        # if len(data) > 2:\n",
+    "        #     # multiple loops\n",
+    "        #     # create sub rule for each extra loop\n",
+    "        #     for i, loop in enumerate(data[:-1]):\n",
+    "        #         newname = rname + \"_{:02d}\".format(i)\n",
+    "        #         call.set(\"rule\", newname)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "            # self.active.tag = \"instance\"\n",
+    "            # self.active.set(\"shape\", rname)\n",
+    "\n",
+    "        \n",
+    "\n",
+    "        \"\"\"_summary_\n",
+    "        `call  [[2, 'tx 1 ty 2'], 'seed']`\n",
+    "        `call  [['rx 1 ry 2'], 'seed']`\n",
+    "        `call [[10, 'tx 1'], [20, 'ty 2'], 'r1']`\n",
+    "        `call  [[], 'sphere']`\n",
+    "        \"\"\"\n",
+    "\n",
+    "    def transgroup(self, tree):\n",
+    "        # joins all the transforms inside {} into a string\n",
+    "        data = ' '.join(self.visit_children(tree))\n",
+    "        # print('transgroup ', data) \n",
+    "        return data\n",
     "\n",
     "    @v_args(meta=True)\n",
     "    def trans(self, kids, meta):\n",
+    "        # called for each transform, returns a string\n",
     "        tid = meta[0]\n",
     "        values = meta[1:]\n",
     "        \n",
@@ -193,41 +262,53 @@
     "            tstr = tid + \" \" + \" \".join(values) \n",
     "        else:\n",
     "            tstr = ''\n",
+    "        # print('trans ', tstr)\n",
     "        return tstr\n",
     "\n",
     "\n",
     "    def loop(self, tree):\n",
-    "        # the list of transforms in {} brackets\n",
-    "        tstr = ' '.join(self.visit_children(tree))\n",
-    "        print(tstr)\n",
-    "        self.active.set(\"transforms\", tstr.strip())\n",
+    "        # an optional count and the list of transforms in {} brackets \n",
+    "        data = self.visit_children(tree)\n",
+    "        # print('loop ', data)\n",
+    "        # tstr = ' '.join(self.visit_children(tree))\n",
+    "        # print(tstr)\n",
+    "        # # self.active.set(\"transforms\", tstr.strip())\n",
+    "        # self.loop_count += 1\n",
+    "        # print('loop count', self.loop_count)\n",
+    "        return data\n",
     "\n",
     "    def ruledef(self, tree):\n",
-    "        self.active = et.SubElement(self.xmltree, \"rule\")\n",
-    "        self.visit_children(tree)\n",
-    "        self.active = self.xmltree\n",
+    "        # self.active = et.SubElement(self.xmltree, \"rule\")\n",
+    "        x = self.visit_children(tree)\n",
+    "        # print('ruledef ', x)\n",
+    "        # self.active = self.xmltree\n",
+    "        \n",
     "\n",
     "            \n",
     "    @v_args(inline=True)\n",
     "    def rulename(self, rname):\n",
     "        # can get here from ruledef or call or mmod\n",
+    "        # print('rulename ', rname)\n",
+    "        return str(rname)\n",
     "        \n",
-    "        if self.active.tag == \"dummy tag\":\n",
-    "            # parent is call\n",
-    "            if rname in [\"box\", \"grid\", \"sphere\", \"line\"]:\n",
-    "                self.active.tag = \"instance\"\n",
-    "                self.active.set(\"shape\", rname)\n",
-    "            else: \n",
-    "                self.active.tag = \"call\"\n",
-    "                self.active.set(\"rule\", rname)\n",
-    "        else:\n",
-    "            # parent is ruledef\n",
-    "            self.active.set(\"name\", rname)\n",
+    "        # if self.active.tag == \"dummy tag\":\n",
+    "        #     # parent is call\n",
+    "        #     if rname in [\"box\", \"grid\", \"sphere\", \"line\"]:\n",
+    "        #         self.active.tag = \"instance\"\n",
+    "        #         self.active.set(\"shape\", rname)\n",
+    "        #     else: \n",
+    "        #         self.active.tag = \"call\"\n",
+    "        #         self.active.set(\"rule\", rname)\n",
+    "        # else:\n",
+    "        #     # parent is ruledef\n",
+    "        #     self.active.set(\"name\", rname)\n",
     "        \n",
     "\n",
     "    @v_args(inline=True)\n",
     "    def repeat(self, c):\n",
     "        self.active.set(\"count\", c)\n",
+    "        # print('repeat ', c)\n",
+    "        return int(c)\n",
     "\n",
     "    @v_args(inline=True)\n",
     "    def wmod(self, weight):\n",
@@ -250,20 +331,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "len(call kids) 3\n",
-      "tx 1 ty 2\n",
-      "len(call kids) 2\n",
-      "rx 1 ry 2\n",
-      "len(call kids) 1\n",
+      "[[2, 'tx 1 ty 2'], 'seed']\n",
+      "[['rx 1 ry 2'], 'seed']\n",
+      "[[], 'box']\n",
       "<?xml version=\"1.0\" ?>\n",
       "<rules>\n",
-      "  <rule name=\"entry\">\n",
-      "    <call count=\"2\" transforms=\"tx 1 ty 2\" rule=\"seed\"/>\n",
-      "    <call transforms=\"rx 1 ry 2\" rule=\"seed\"/>\n",
-      "  </rule>\n",
-      "  <rule name=\"seed\">\n",
-      "    <instance shape=\"box\"/>\n",
-      "  </rule>\n",
+      "  <rule name=\"entry\" count=\"2\"/>\n",
       "</rules>\n",
       "\n"
      ]
@@ -278,26 +351,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ok we have the the right xml structure for a simple case, now need to get the actual values for rulename, transform string, count attributes into the correct places.\n",
     "\n",
-    "main -> entry -> call -> loop - > trans  \n",
-    "     -> ruledef -> call -> loop -> trans \n",
+    "why do I get   \n",
+    "`loop  [Token('NUMBER', '2'), 'tx 1', 'ty 2']`\n",
+    "instead of \n",
+    "`loop  ['2', 'tx 1', 'ty 2']`\n",
+    "as repeat returns 2, change to `return int(c)`\n",
     "\n",
-    "transforms - DONE  \n",
-    "count  - DONE  \n",
-    "rulename - DONE  \n",
+    "best structure for data returned from call's kids might be\n",
+    "`[2, 'tx 1 ty 2', 'seed' ]`\n",
     "\n",
-    "maybe do need a different grammar for a rule call and a shape instance?  \n",
-    "Or could retag rule from rulename method? - DONE\n",
+    "as of now have\n",
+    "`[[2, 'tx 1', 'ty 2'], 'seed']`\n",
+    "or \n",
+    "`[['rx 1', 'ry 2'], 'seed']`\n",
+    "and for nested loops\n",
+    "`[[10, 'tx 1'], [20, 'ty 2'], 'r1']`\n",
+    "which will be hard to separate optional count.\n",
     "\n",
-    "I think this works!\n",
-    "\n",
-    "then rule mods md_mod, w_mod and sucessor rule  - DONE  \n",
-    "\n",
-    "FIX grammar to include all set statements but only action set maxdepth\n",
-    "ON principle, grammar should define everything in file, but Interprter only processes what's needed for eisenxml. This would make repurposing grammar parser for some other type of output possible.\n",
-    "\n",
-    "FIX multiple (nested) loops per call"
+    "now have\n",
+    "`call  [[2, 'tx 1 ty 2'], 'seed']`\n",
+    "`call  [['rx 1 ry 2'], 'seed']`\n",
+    "`call [[10, 'tx 1'], [20, 'ty 2'], 'r1']`\n",
+    "`call  [[], 'sphere']`\n",
+    "which will work\n"
    ]
   },
   {
@@ -309,20 +386,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "len(call kids) 1\n",
-      "len(call kids) 2\n",
-      "tx 1 rz 3 ry 5\n",
-      "len(call kids) 2\n",
-      "s 1 1 0.1 \n",
+      "[[], 'R1']\n",
+      "[['tx 1 rz 3 ry 5'], 'R1']\n",
+      "[['s 1 1 0.1 '], 'box']\n",
       "<?xml version=\"1.0\" ?>\n",
-      "<rules>\n",
-      "  <rule name=\"entry\">\n",
-      "    <call rule=\"R1\"/>\n",
-      "  </rule>\n",
-      "  <rule name=\"R1\" weight=\"10\" max_depth=\"20\">\n",
-      "    <call transforms=\"tx 1 rz 3 ry 5\" rule=\"R1\"/>\n",
-      "    <instance transforms=\"s 1 1 0.1\" shape=\"box\"/>\n",
-      "  </rule>\n",
+      "<rules weight=\"10\" max_depth=\"20\">\n",
+      "  <rule name=\"entry\"/>\n",
       "</rules>\n",
       "\n"
      ]
@@ -407,32 +476,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "len(call kids) 7\n",
-      "ry 36 \n",
-      "ry 10\n",
-      "   \n",
-      "len(call kids) 2\n",
-      "sa 0.9 rz 5  rx 5 tx 1\n",
-      "len(call kids) 2\n",
-      "s 1 0.2 0.5\n",
-      "len(call kids) 2\n",
-      "sa 0.99 rz -5  rx -5 tx 1\n",
-      "len(call kids) 2\n",
-      "s 1 0.2 0.5\n",
+      "[[10, 'ry 36 '], [30], ['ry 10'], [1], ['   '], 'r1']\n",
+      "[['sa 0.9 rz 5  rx 5 tx 1'], 'r1']\n",
+      "[['s 1 0.2 0.5'], 'box']\n",
+      "[['sa 0.99 rz -5  rx -5 tx 1'], 'r1']\n",
+      "[['s 1 0.2 0.5'], 'box']\n",
       "<?xml version=\"1.0\" ?>\n",
-      "<rules>\n",
-      "  <rule name=\"entry\">\n",
-      "    <call count=\"1\" transforms=\"\" rule=\"r1\"/>\n",
-      "  </rule>\n",
-      "  <rule name=\"r1\" weight=\"20\">\n",
-      "    <call transforms=\"sa 0.9 rz 5  rx 5 tx 1\" rule=\"r1\"/>\n",
-      "    <instance transforms=\"s 1 0.2 0.5\" shape=\"box\"/>\n",
-      "  </rule>\n",
-      "  <rule name=\"r1\" weight=\"20\">\n",
-      "    <call transforms=\"sa 0.99 rz -5  rx -5 tx 1\" rule=\"r1\"/>\n",
-      "    <instance transforms=\"s 1 0.2 0.5\" shape=\"box\"/>\n",
-      "  </rule>\n",
-      "  <rule name=\"r1\"/>\n",
+      "<rules weight=\"20\">\n",
+      "  <rule name=\"entry\" count=\"1\"/>\n",
       "</rules>\n",
       "\n"
      ]
@@ -468,18 +519,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "len(call kids) 5\n",
-      "tx 1\n",
-      "ty 2\n",
-      "len(call kids) 1\n",
+      "[[10, 'tx 1'], [20], ['ty 2'], 'r1']\n",
+      "[['rx 1'], 'box']\n",
+      "[[], 'sphere']\n",
       "<?xml version=\"1.0\" ?>\n",
       "<rules>\n",
-      "  <rule name=\"entry\">\n",
-      "    <call count=\"20\" transforms=\"ty 2\" rule=\"r1\"/>\n",
-      "  </rule>\n",
-      "  <rule name=\"r1\">\n",
-      "    <instance shape=\"box\"/>\n",
-      "  </rule>\n",
+      "  <rule name=\"entry\" count=\"20\"/>\n",
       "</rules>\n",
       "\n"
      ]
@@ -501,7 +546,8 @@
     "10 * { x 1} 20 * { y 2 }  r1\n",
     "\n",
     "rule r1  {\n",
-    "    box\n",
+    "    {rx 1} box\n",
+    "    sphere\n",
     "}\"\"\"\n",
     "\n",
     "t = parser.parse(oct2)\n",
@@ -536,21 +582,32 @@
       "  global_md\t100\n",
       "  entry\n",
       "    call\n",
-      "      repeat\t10\n",
       "      loop\n",
-      "        trans\n",
-      "          x\n",
-      "          1\n",
-      "      repeat\t20\n",
+      "        repeat\t10\n",
+      "        transgroup\n",
+      "          trans\n",
+      "            x\n",
+      "            1\n",
       "      loop\n",
-      "        trans\n",
-      "          y\n",
-      "          2\n",
+      "        repeat\t20\n",
+      "      loop\n",
+      "        transgroup\n",
+      "          trans\n",
+      "            y\n",
+      "            2\n",
       "      rulename\tr1\n",
       "  ruledef\n",
       "    rulename\tr1\n",
       "    call\n",
+      "      loop\n",
+      "        transgroup\n",
+      "          trans\n",
+      "            rx\n",
+      "            1\n",
       "      rulename\tbox\n",
+      "    call\n",
+      "      loop\n",
+      "      rulename\tsphere\n",
       "\n"
      ]
     }
@@ -572,66 +629,39 @@
     "    make a rule for each extra loop  \n",
     "    call them in  a chain  \n",
     "\n",
-    "can we push the repeat down to the loop level like this\n",
+    "have in eisenscript_02.lark pushed the repeat down to the loop level \n",
     "\n",
-    "```\n",
-    "main\n",
-    "  global_md\t100\n",
-    "  entry\n",
-    "    call     \n",
-    "      loop\n",
-    "        repeat\t10\n",
-    "        trans\n",
-    "          x\n",
-    "          1     \n",
-    "      loop\n",
-    "        repeat\t20\n",
-    "        trans\n",
-    "          y\n",
-    "          2\n",
-    "      rulename\tr1\n",
-    "  ruledef\n",
-    "    rulename\tr1\n",
-    "    call\n",
-    "      rulename\tbox\n",
-    "```\n",
-    "This would mean we had all the bits for a new rule in one place."
+    "All the bits for a new rule in one place.\n",
+    "Who should handle its creation? call or loop?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = ['a']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "main\n",
-      "  global_md\t100\n",
-      "  entry\n",
-      "    call\n",
-      "      repeat\t10\n",
-      "      loop\n",
-      "        trans\n",
-      "          x\n",
-      "          1\n",
-      "      repeat\t20\n",
-      "      loop\n",
-      "        trans\n",
-      "          y\n",
-      "          2\n",
-      "      rulename\tr1\n",
-      "  ruledef\n",
-      "    rulename\tr1\n",
-      "    call\n",
-      "      rulename\tbox\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(t.pretty())"
+    "len(x) == True"
    ]
   }
  ],
