--- a/notebooks/09-translate-here.ipynb
+++ b/notebooks/09-translate-here.ipynb
@@ -2,28 +2,83 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "\n",
     "from xml.etree import ElementTree as et\n",
-    "from eisenscript_to_xml.lark_inter import Iesxml, parser, pre_process_es\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fn = Path(\"/media/elfnor/BeastHoard/gits/eisenscript_to_xml/tests/data/Examples/Default.es\")\n"
+    "from eisenscript_to_xml.lark_inter import Iesxml, parser, pre_process_es\n",
+    "from eisenscript_to_xml import EXAMPLES_ES, EXAMPLES_IMG, EXAMPLES_XML"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "to_xml = [\n",
+    "    \"Ball.es\",\n",
+    "    \"BinaryKite.es\",\n",
+    "    \"City of Glass.es\",\n",
+    "    \"Default.es\",\n",
+    "    \"Frame In Frame.es\",\n",
+    "    \"Grinder.es\",\n",
+    "    \"Konstrukt.es\",\n",
+    "    \"Menger.es\",\n",
+    "    \"Moduli Creatures.es\",\n",
+    "    \"Mondrian.es\",\n",
+    "    \"Nabla.es\",\n",
+    "    \"NineWorthies.es\",\n",
+    "    \"Nouveau.es\",\n",
+    "    \"Nouveau2.es\",\n",
+    "    \"Nouveau3.es\",\n",
+    "    \"Octopod II.es\",\n",
+    "    \"Reflection.es\",\n",
+    "    \"RoundTree.es\",\n",
+    "    \"SpiralTree2D.es\",\n",
+    "    \"Synctor.es\",\n",
+    "    \"Thingy.es\",\n",
+    "    \"Torus2.es\",\n",
+    "    \"Torus3.es\",\n",
+    "]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for fn in to_xml:\n",
+    "    with (EXAMPLES_ES / fn).open() as f:\n",
+    "        es_str = f.read()\n",
+    "    es_str = pre_process_es(es_str)\n",
+    "    test = parser.parse(es_str)\n",
+    "    xml_str = Iesxml().convert(test)\n",
+    "    with (EXAMPLES_XML / fn).with_suffix('.xml').open('w') as f:\n",
+    "        f.write(xml_str)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str1=\"\"\"5 * { ry 72  z 1.0   }   2 *  { z 1.0   } xbox\n",
+    "\n",
+    "rule xbox {\n",
+    "    box\n",
+    "}\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -31,21 +86,18 @@
      "output_type": "stream",
      "text": [
       "<?xml version=\"1.0\" ?>\n",
-      "<rules max_depth=\"400\">\n",
+      "<rules max_depth=\"100\">\n",
       "  <rule name=\"entry\">\n",
-      "    <call rule=\"r0\" count=\"1\" transforms=\"\"/>\n",
+      "    <call rule=\"xbox_00\" count=\"5\" transforms=\"ry 72 tz 1.0\"/>\n",
       "  </rule>\n",
-      "  <rule name=\"r0\">\n",
-      "    <call rule=\"R1\" count=\"3\" transforms=\"rz 120\"/>\n",
-      "    <call rule=\"R2\" count=\"3\" transforms=\"rz 120\"/>\n",
+      "  <rule name=\"xbox_00\">\n",
+      "    <call rule=\"xbox_01\" count=\"1\" transforms=\"2\"/>\n",
       "  </rule>\n",
-      "  <rule name=\"R1\">\n",
-      "    <call rule=\"R1\" count=\"1\" transforms=\"tx 1.3 rx 1.57 rz 6 ry 3 sa 0.99\"/>\n",
-      "    <instance shape=\"sphere\" count=\"1\" transforms=\"sa 4\"/>\n",
+      "  <rule name=\"xbox_01\">\n",
+      "    <call rule=\"xbox\" count=\"1\" transforms=\"tz 1.0\"/>\n",
       "  </rule>\n",
-      "  <rule name=\"R2\">\n",
-      "    <call rule=\"R2\" count=\"1\" transforms=\"tx -1.3 rz 6 ry 3 sa 0.99\"/>\n",
-      "    <instance shape=\"sphere\" count=\"1\" transforms=\"sa 4\"/>\n",
+      "  <rule name=\"xbox\">\n",
+      "    <instance shape=\"box\" count=\"1\" transforms=\"\"/>\n",
       "  </rule>\n",
       "</rules>\n",
       "\n"
@@ -53,9 +105,7 @@
     }
    ],
    "source": [
-    "with fn.open() as f:\n",
-    "    es_str = f.read()\n",
-    "es_str = pre_process_es(es_str)\n",
+    "es_str = pre_process_es(str1)\n",
     "test = parser.parse(es_str)\n",
     "xml_str = Iesxml().convert(test)\n",
     "print(xml_str)"
