ready to reorg file structure

--- a/notebooks/09-translate-here.ipynb
+++ b/notebooks/09-translate-here.ipynb
@@ -9,17 +9,18 @@
     "from pathlib import Path\n",
     "\n",
     "from xml.etree import ElementTree as et\n",
-    "from eisenscript_to_xml.lark_inter import Iesxml, parser, pre_process_es\n",
+    "from eisenscript_to_xml.lark_inter import translate\n",
     "from eisenscript_to_xml import EXAMPLES_ES, EXAMPLES_IMG, EXAMPLES_XML"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "to_xml = [\n",
+    "    \"Arc Sphere.es\",\n",
     "    \"Ball.es\",\n",
     "    \"BinaryKite.es\",\n",
     "    \"City of Glass.es\",\n",
@@ -43,21 +44,22 @@
     "    \"Thingy.es\",\n",
     "    \"Torus2.es\",\n",
     "    \"Torus3.es\",\n",
-    "]\n"
+    "]\n",
+    "\n",
+    "to_xml = [\n",
+    "    \"Arc Sphere.es\",]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "for fn in to_xml:\n",
     "    with (EXAMPLES_ES / fn).open() as f:\n",
     "        es_str = f.read()\n",
-    "    es_str = pre_process_es(es_str)\n",
-    "    test = parser.parse(es_str)\n",
-    "    xml_str = Iesxml().convert(test)\n",
+    "    xml_str = translate(es_str)\n",
     "    with (EXAMPLES_XML / fn).with_suffix('.xml').open('w') as f:\n",
     "        f.write(xml_str)\n",
     "    "
@@ -65,20 +67,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "str1=\"\"\"5 * { ry 72  z 1.0   }   2 *  { z 1.0   } xbox\n",
-    "\n",
-    "rule xbox {\n",
-    "    box\n",
-    "}\"\"\""
+    "es_str = \"\"\" 36 * { rz 10  y 1   }   36 * { ry 10  z 1.2  } xbox\n",
+    "rule xbox { box}\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -88,16 +87,13 @@
       "<?xml version=\"1.0\" ?>\n",
       "<rules max_depth=\"100\">\n",
       "  <rule name=\"entry\">\n",
-      "    <call rule=\"xbox_00\" count=\"5\" transforms=\"ry 72 tz 1.0\"/>\n",
+      "    <call rule=\"xbox_00\" count=\"36\" transforms=\"rz 10 ty 1\"/>\n",
       "  </rule>\n",
       "  <rule name=\"xbox_00\">\n",
-      "    <call rule=\"xbox_01\" count=\"1\" transforms=\"2\"/>\n",
-      "  </rule>\n",
-      "  <rule name=\"xbox_01\">\n",
-      "    <call rule=\"xbox\" count=\"1\" transforms=\"tz 1.0\"/>\n",
+      "    <call rule=\"xbox\" count=\"36\" transforms=\"ry 10 tz 1.2\"/>\n",
       "  </rule>\n",
       "  <rule name=\"xbox\">\n",
-      "    <instance shape=\"box\" count=\"1\" transforms=\"\"/>\n",
+      "    <instance shape=\"box\"/>\n",
       "  </rule>\n",
       "</rules>\n",
       "\n"
@@ -105,9 +101,7 @@
     }
    ],
    "source": [
-    "es_str = pre_process_es(str1)\n",
-    "test = parser.parse(es_str)\n",
-    "xml_str = Iesxml().convert(test)\n",
+    "xml_str = translate(es_str)\n",
     "print(xml_str)"
    ]
   }
