--- a/notebooks/09-translate-here.ipynb
+++ b/notebooks/09-translate-here.ipynb
@@ -45,9 +45,7 @@
     "    \"Torus2.es\",\n",
     "    \"Torus3.es\",\n",
     "]\n",
-    "\n",
-    "to_xml = [\n",
-    "    \"Arc Sphere.es\",]\n"
+    "\n"
    ]
   },
   {
@@ -71,8 +69,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "es_str = \"\"\" 36 * { rz 10  y 1   }   36 * { ry 10  z 1.2  } xbox\n",
-    "rule xbox { box}\"\"\""
+    "es_str = \"\"\" \n",
+    "36 * { rz 10  y 1   }   36 * { ry 10  z 1.2  } xbox\n",
+    "rule xbox { box}\n",
+    "\"\"\""
    ]
   },
   {
